@@ -1,7 +1,11 @@
 package com.project.swimcb.survey.adapter.in;
 
-import static com.project.swimcb.survey.adapter.in.CreateSurveyDissatisfactionResponseControllerTest.*;
+import static com.project.swimcb.survey.adapter.in.CreateSurveyDissatisfactionResponseControllerTest.MEMBER_ID;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.Matchers.containsString;
+import static org.mockito.ArgumentMatchers.assertArg;
+import static org.mockito.BDDMockito.then;
+import static org.mockito.Mockito.only;
 import static org.springframework.http.MediaType.APPLICATION_JSON;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
@@ -10,14 +14,15 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.project.swimcb.common.WebMvcTestWithoutSecurity;
 import com.project.swimcb.common.WithMockTokenInfo;
+import com.project.swimcb.survey.application.port.in.CreateSurveyDissatisfactionResponseUseCase;
 import com.project.swimcb.survey.domain.SurveyDissatisfactionReason;
-import java.util.Collections;
 import java.util.List;
 import lombok.val;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
 @WebMvcTestWithoutSecurity(controllers = CreateSurveyDissatisfactionResponseController.class)
@@ -29,6 +34,9 @@ class CreateSurveyDissatisfactionResponseControllerTest {
 
   @Autowired
   private ObjectMapper objectMapper;
+
+  @MockitoBean
+  private CreateSurveyDissatisfactionResponseUseCase useCase;
 
   static final long MEMBER_ID = 1L;
 
@@ -50,6 +58,57 @@ class CreateSurveyDissatisfactionResponseControllerTest {
               .contentType(APPLICATION_JSON)
               .content(objectMapper.writeValueAsString(request)))
           .andExpect(status().isOk());
+
+      then(useCase).should(only()).createSurveyDissatisfactionResponse(assertArg(i -> {
+        assertThat(i.memberId()).isEqualTo(MEMBER_ID);
+        assertThat(i.feedback()).isEqualTo(request.feedback());
+        assertThat(i.reasons()).isEqualTo(request.reasons());
+      }));
+    }
+
+    @Test
+    @DisplayName("피드백이 null인 경우 400 에러를 반환한다")
+    void shouldReturn400WhenFeedbackIsNull() throws Exception {
+      // given
+      val request = TestCreateSurveyDissatisfactionResponseRequestFactory.createWithNullFeedback();
+
+      // when
+      // then
+      mockMvc.perform(post(PATH)
+              .contentType(APPLICATION_JSON)
+              .content(objectMapper.writeValueAsString(request)))
+          .andExpect(status().isBadRequest())
+          .andExpect(content().string(containsString("피드백은 null 일 수 없습니다")));
+    }
+
+    @Test
+    @DisplayName("피드백이 10자 미만인 경우 400 에러를 반환한다")
+    void shouldReturn400WhenFeedbackIsTooShort() throws Exception {
+      // given
+      val request = TestCreateSurveyDissatisfactionResponseRequestFactory.createWithShortFeedback();
+
+      // when
+      // then
+      mockMvc.perform(post(PATH)
+              .contentType(APPLICATION_JSON)
+              .content(objectMapper.writeValueAsString(request)))
+          .andExpect(status().isBadRequest())
+          .andExpect(content().string(containsString("피드백은 10자 이상 500자 이하로 입력해주세요")));
+    }
+
+    @Test
+    @DisplayName("피드백이 500자 초과인 경우 400 에러를 반환한다")
+    void shouldReturn400WhenFeedbackIsTooLong() throws Exception {
+      // given
+      val request = TestCreateSurveyDissatisfactionResponseRequestFactory.createWithLongFeedback();
+
+      // when
+      // then
+      mockMvc.perform(post(PATH)
+              .contentType(APPLICATION_JSON)
+              .content(objectMapper.writeValueAsString(request)))
+          .andExpect(status().isBadRequest())
+          .andExpect(content().string(containsString("피드백은 10자 이상 500자 이하로 입력해주세요")));
     }
 
     @Test
@@ -64,7 +123,7 @@ class CreateSurveyDissatisfactionResponseControllerTest {
               .contentType(APPLICATION_JSON)
               .content(objectMapper.writeValueAsString(request)))
           .andExpect(status().isBadRequest())
-          .andExpect(content().string(containsString("만족도 평가는 null 일 수 없습니다")));
+          .andExpect(content().string(containsString("불만족 이유 리스트는 null 일 수 없습니다")));
     }
 
     @Test
@@ -83,7 +142,8 @@ class CreateSurveyDissatisfactionResponseControllerTest {
 
     @Test
     @DisplayName("여러 불만족 사유와 함께 성공적으로 등록한다")
-    void shouldCreateSurveyDissatisfactionResponseSuccessfullyWithMultipleReasons() throws Exception {
+    void shouldCreateSurveyDissatisfactionResponseSuccessfullyWithMultipleReasons()
+        throws Exception {
       // given
       val request = TestCreateSurveyDissatisfactionResponseRequestFactory.createWithMultipleReasons();
 
@@ -127,20 +187,44 @@ class CreateSurveyDissatisfactionResponseControllerTest {
 
     private static CreateSurveyDissatisfactionResponseRequest create() {
       return new CreateSurveyDissatisfactionResponseRequest(
+          "앱이 사용하기 어려워서 개선이 필요합니다",
+          List.of(SurveyDissatisfactionReason.SWIMMING_POOL_INACCURATE)
+      );
+    }
+
+    private static CreateSurveyDissatisfactionResponseRequest createWithNullFeedback() {
+      return new CreateSurveyDissatisfactionResponseRequest(
+          null,
+          List.of(SurveyDissatisfactionReason.SWIMMING_POOL_INACCURATE)
+      );
+    }
+
+    private static CreateSurveyDissatisfactionResponseRequest createWithShortFeedback() {
+      return new CreateSurveyDissatisfactionResponseRequest(
+          "짧음",
+          List.of(SurveyDissatisfactionReason.SWIMMING_POOL_INACCURATE)
+      );
+    }
+
+    private static CreateSurveyDissatisfactionResponseRequest createWithLongFeedback() {
+      val longFeedback = "a".repeat(501);
+      return new CreateSurveyDissatisfactionResponseRequest(
+          longFeedback,
           List.of(SurveyDissatisfactionReason.SWIMMING_POOL_INACCURATE)
       );
     }
 
     private static CreateSurveyDissatisfactionResponseRequest createWithNullReasons() {
-      return new CreateSurveyDissatisfactionResponseRequest(null);
+      return new CreateSurveyDissatisfactionResponseRequest("앱이 사용하기 어려워서 개선이 필요합니다", null);
     }
 
     private static CreateSurveyDissatisfactionResponseRequest createWithEmptyReasons() {
-      return new CreateSurveyDissatisfactionResponseRequest(Collections.emptyList());
+      return new CreateSurveyDissatisfactionResponseRequest("앱이 사용하기 어려워서 개선이 필요합니다", List.of());
     }
 
     private static CreateSurveyDissatisfactionResponseRequest createWithMultipleReasons() {
       return new CreateSurveyDissatisfactionResponseRequest(
+          "여러 가지 문제점이 있어서 개선이 필요합니다",
           List.of(
               SurveyDissatisfactionReason.SWIMMING_POOL_INACCURATE,
               SurveyDissatisfactionReason.PROGRAM_INFO_HARD_TO_SEE,
